src/css/styles.css
/* ... */
.btn-primary {
	font-size: 17px;
	margin: 30px 0 10px;
	margin-right: 10px;
	line-height: 20px;
	padding: 15px 35px;
	height: 50px;
	border: 2px solid var(--xeeds-green);
	background: var(--xeeds-green);
	transition: all 0.4s;
	color: var(--xeeds-text-color);
}
.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
	border: 2px solid var(--xeeds-green);
	background: transparent;
	color: var(--xeeds-green);
}
.btn-secondary {
	font-size: 20px;
	font-weight: 300;
	line-height: 20px;
	padding: 20px 50px;
	height: 65px;
	border: none;
	background: var(--xeeds-darkgreen);
	transition: all 0.4s;
	color: var(--xeeds-text-color);
	border-radius: 4px;
}
.btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active, .btn-secondary.active, .open > .dropdown-toggle.btn-secondary {
	background: var(--xeeds-darkgreen);
	color: var(--xeeds-text-color)
}
.site-name img{
	width: 200px; 
	height: 65px
}
.logo {
	margin: 80px 0 100px 0;
}
.logo img{
	width: 200px; 
	height: 65px
}
.landing h1{
	font-size: 56px;
	font-weight: 300;
	color: #fff;
	margin: 120px 0 20px 0;
	text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
}
.landing p {
	color: #fff;
}
.landing-text {
	margin-bottom: 20px;
}
.landing-text p { 
	padding-bottom: 20px;
}
.more {
	margin-bottom: 100px;
}
.more p {
	font-size: 17px;
}
.head-btn {
	margin-bottom: 120px;
}
.option {
	text-transform: uppercase;
	padding: 5px;
	min-width: 80px;
	margin-right: 5px;
	transition: all 0.4s;
	font-size: 14px;
	color: #fff;
}
.option .fa {
	font-size: 16px;
	margin-right: 10px;
}
.option:hover {
	color: var(--xeeds-darkgreen);
}
.header-phone {
	margin: 50px 0 100px;
}
#intro {
	padding: 80px 0 80px;
}
#intro h2 {
	font-size: 40px;
	font-weight: 300;
	margin: 15px 0 15px 0;
}
.intro-pic {
	margin-top: 20px;
}
.btn-section {
	padding-top: 20px;
}
#services {
	padding: 80px 0;
}
#services h2 {
	margin: 15px 0 15px 0;
	font-size: 40px;
	font-weight: 300;
}
#services .services-title p {
	font-size: 18px;
}
.row-feat {
	padding-top: 50px;
}
.feat-list {
	margin-top: 40px;
}
.feat-list i {
	font-size: 48px;
	float: left;
	width: 20%;
	color: var(--xeeds-green);
	height: 100%;
	position: relative;
	opacity: 0.6;
	-webkit-transition: all .8s ease;
	transition: all .8s ease;
	top: 10px;
}
.feat-list:hover i {
	color: var(--xeeds-darkgreen);
	-webkit-transition: all .8s ease;
	transition: all .8s ease;
}
#services .inner {
	float: left;
	display: inline-block;
	width: 80%;
}
#about-us {
	padding: 100px 0 100px;
}
#about-us h2 {
	font-size: 40px;
	font-weight: 300;
	margin: 15px 0 15px 0;
}
.about-us-pic {
	margin-top: 20px;
}
.subscribe {
	color: #fff;
}
.letter {
	margin-top: 100px;
	width: 100px;
	height: 100px;
	line-height: 100px;
	font-size: 50px;
	color: var(--xeeds-green);
	border-radius: 5px;
	border: solid 1px var(--xeeds-green);
	border-radius: 50%;
}
.subscribe p {
	margin: 30px auto 30px;
}
.subscribe-form {
	max-width: 400px;
	margin: 50px auto 150px;
	text-align: center;
	overflow: hidden;
}
.subscribe-form form {
	position: relative;
}
.subscribe-form input {
	max-width: 85%;
	position: relative;
	padding: 5px 25px;
}
.subscribe-form .form-control {
	border-radius: 4px 0 0 4px;
	border: none;
	background-color: rgba(255, 255, 255, 0.6);
	color: #333;
	font-size: 1.2em;
	height: 55px;
}
.subscribe-form button {
	border-radius: 0 4px 4px 0;
	background-color: var(--xeeds-green);
	color: #ffffff;
	font-size: 1em;
	line-height: 52px;
	position: absolute;
	top: 0px;
	right: 0px;
	padding: 0 30px;
	margin: 0;
	-webkit-transition: all .8s ease;
	transition: all .8s ease;
	border-radius: 0;
}
.subscribe-form .btn {
	height: 55px;
}
.subscribe-form .btn:hover {
	background-color: var(--xeeds-darkgreen);
	color: #fff;
	-webkit-transition: all .8s ease;
	transition: all .8s ease;
}
.subscribe-form .form-control::-webkit-input-placeholder {
	color: #333;
}
.subscribe-form .form-control:-moz-placeholder { 
	color: #333;  
}
.subscribe-form .form-control::-moz-placeholder { 
	color: #333;  
}
.subscribe-form .form-control:-ms-input-placeholder {  
	color: #333;  
}
#portfolios {
	padding-top: 100px;
}
.title-line {
    width: 100px;
    height: 3px;
    margin: 0 auto;
    background: var(--xeeds-green);
}
.portfolio {
    padding-top: 50px;
    padding-bottom: 100px;
}
.portfolio .screen {
    background: #FFFFFF;
    padding: 10px;
    margin: 13px;
    display: block;
}
.portfolio .screen img {
    width: 100%;
	border-radius: 4px;
	
	-webkit-transition: all .8s ease;
	transition: all .8s ease;
}
.portfolio .screen img:hover {
	border: solid 5px var(--xeeds-green);
	-webkit-transition: all .8s ease;
	transition: all .8s ease;
}
.modal-backdrop.in {
    background-color: #000;
}
.ekko-lightbox .modal-content {
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	box-shadow: none;
	-webkit-border-radius: 0;
	-moz-border-radius: 0;
	border-radius: 0;
	border: none;
	background-color: transparent;
}
.ekko-lightbox .modal-header {
	border: 0;
	padding-left: 0;
	padding-right: 0;
}
.ekko-lightbox .modal-header .close {
	-webkit-opacity: 0.7;
	-moz-opacity: 0.7;
	opacity: 0.7;
	color: #fff;
	text-shadow: 0;
	font-weight: 100;
	margin-top: 5px;
}
.ekko-lightbox .modal-header .close:hover {
	-webkit-opacity: 1;
	-moz-opacity: 1;
	opacity: 1;
}
.ekko-lightbox .modal-header h4.modal-title {
	font-weight: 100;
	color: #fff;
	padding: 0;
}
.ekko-lightbox .modal-body {
	padding: 0;
}
.ekko-lightbox .modal-footer {
	-webkit-opacity: 0.9;
	-moz-opacity: 0.9;
	opacity: 0.9;
	border: 0;
	color: #fff;
	font-weight: 100;
	padding: 0;
}
.ekko-lightbox-nav-overlay a {
	-webkit-opacity: 0.9;
	-moz-opacity: 0.9;
	opacity: 0.9;
	text-shadow: none;
}
#client {
	background: #f6f6f6;
	padding: 70px 0 70px;
}
#client img {
	max-height: 50px;
	margin: 0 20px;
	opacity: 1;
	transition: all 0.3s ease;
	-webkit-transition: all 0.3s ease;
	-moz-transition: all 0.3s ease;
}
/* ... */

